no delayed readSessionConfig

the config pointer might be invalid at that point in time

if we want to delay stuff, that must be done inside
readSessionConfig in the KTextEditor::View itself,
after reading the stuff from the passed config

BUG: 453152